--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="center">
         <div class="ring"></div>    
-        <span>loading...</span>
+        <span>loading..>.</span>
       </div>
 </body>
 </html>
